[project]
name        = "parsenaut"
description = "🚀 Parse and launch classes as commands"
authors     = [{name="Tremeschin"}]
version     = "0.1.0"
readme      = "readme.md"
license     = "MIT"
requires-python = ">=3.10"
dependencies = ["attrs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
